# GobLean

./: AGENTS.MD  README.md  pyproject.toml
docs/: agent_notes.md  progress.md
goblean/: __init__.py  cli.py  report.py  schema_check.py  shadow_eval.py
goblean/dictionary/: __init__.py
goblean/fingerprint/: __init__.py  platform_version.py
goblean/ingest/: __init__.py  har_ingest.py
goblean/normalize/: __init__.py  __main__.py  envelope.py
goblean/validator/: __init__.py  fsm.py
rules/specs/: HB_PLAYHEAD_MONOTONIC_WEB.yaml
rules/tests/: HB_PLAYHEAD_MONOTONIC_WEB__pass__simple.har
tests/: test_dictionary.py  test_fingerprint.py  test_imports.py  test_ingest.py  test_normalize.py  test_normalize_cli.py  test_playhead_monotonicity_rule.py  test_report.py  test_schema_check.py
