[project]
name = "goblean"
version = "0.1.0"
description = "Local telemetry spec framework"
authors = [{name = "GobLean"}]
dependencies = [
  "fastapi",
  "polars",
  "pydantic",
  "duckdb",
  "scikit-learn",
  "umap-learn",
  "hdbscan",
  "tslearn",
  "semver",
  "haralyzer",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
